# agenticsAide

./: .gitignore  README.md  databricks.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: deploy.yml  pr_validation.yml
conf/dev/: postgres_config.yml  sftp_config.yml
conf/prod/: postgres_config.yml  sftp_config.yml
conf/qa/: postgres_config.yml  sftp_config.yml
docs/: architecture.md  collibra_setup.md  runbook.md
infra/: secret_scopes.md
infra/cluster_policies/: default_policy.json
infra/unity_catalog/: grants.sql
jobs/: collibra_publish_job.py  postgres_ingestion_job.py  sftp_excel_ingestion_job.py  silver_to_gold_job.py
pipelines/: bronze_to_silver_dlt.py
src/: __init__.py
src/collibra/: __init__.py  lineage.py  publisher.py
src/ingestion/postgres/: __init__.py  postgres_ingestor.py  watermark.py
src/ingestion/sftp_excel/: __init__.py  excel_parser.py  manifest.py  sftp_client.py  sftp_excel_ingestor.py
src/transforms/: __init__.py
src/transforms/gold/: __init__.py  gold_transforms.py
src/transforms/silver/: __init__.py  dlt_bronze_to_silver.py
src/utils/: config.py  secrets.py
tests/: test_config.py  test_manifest.py  test_postgres_ingestor.py
